# suno-demo

./: .gitignore  Dockerfile  README.md  backend_spec.md  branching_spec.md  fixes_pr_roadmap.md  frontend_pr_roadmap.md  frontend_spec.md  pr_roadmap.md  pyproject.toml  spec.md  viz_spec.md
backend/: .env.example  .gitignore  DOCKERFILE  README.md  backend_pr_roadmap.md  backend_spec.md  pyproject.toml  render.yaml  spec.md
backend/app/: main.py  settings.py
backend/app/api/: deps.py  sessions.py
backend/app/core/: similarity.py
backend/app/models/: api.py  domain.py
backend/app/services/: clap_embedding_provider.py  elevenlabs_music_provider.py  fake_cluster_naming_provider.py  fake_embedding_provider.py  fake_music_provider.py  hf_musicgen_provider.py  openai_cluster_naming_provider.py  providers.py  session_service.py  session_store.py
backend/src/suno_backend/app/: main.py  media_utils.py  settings.py
backend/src/suno_backend/app/api/: deps.py  sessions.py
backend/src/suno_backend/app/core/: clustering.py
backend/src/suno_backend/app/models/: api.py  domain.py
backend/tests/: test_settings.py
backend/tests/api/: test_health.py  test_sessions_api.py
backend/tests/core/: test_clustering.py  test_similarity.py
backend/tests/models/: test_api_models.py  test_domain_models.py
backend/tests/services/: test_clap_embedding_provider.py  test_clap_embedding_provider_audio_io.py  test_elevenlabs_music_provider.py  test_fake_providers.py  test_openai_cluster_naming_provider.py  test_session_service_with_fakes.py  test_session_store.py
frontend/: README.md  (+3 more)
(+62 files in other folders)
