[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "suno-demo"
version = "0.1.0"
description = "suno session lab backend"
readme = "spec.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<0.120",
  "uvicorn>=0.23,<0.31",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.0,<3.0",
  "httpx>=0.25,<0.28",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<9.0",
]

[dependency-groups]
dev = [
  "pytest>=7.4,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.build.targets.sdist]
include = [
  "backend",
  "spec.md",
  "backend_spec.md",
  "tests",
]
