[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "suno-demo"
version = "0.1.0"
description = "suno session lab backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<0.120",
  "uvicorn>=0.23,<0.31",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.0,<3.0",
  "httpx>=0.25,<0.28",
  "requests>=2.31,<3.0",
  "google-genai>=0.3.0",
  "transformers>=4.39,<5.0",
  "torch>=2.5,<3.0",
  "torchaudio>=2.5,<3.0",
  "scikit-learn>=1.4,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<9.0",
]

[dependency-groups]
dev = [
  "pytest>=7.4,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/suno_backend"]

[tool.hatch.build.targets.sdist]
include = [
  "src/suno_backend",
  "spec.md",
  "backend_spec.md",
  "tests",
]
